--- a/app/cooperation/cooperation.html
+++ b/app/cooperation/cooperation.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h3>Etablerade anslutningar</h3>
+      <h3>Etablerade anslutningar {{bar}}</h3>
       <table class="table">
         <thead>
           <tr>
