--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css"/>
+  <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -57,8 +57,8 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
-<script src="foo/FooService.js"></script>
-<script src="foo/FooCtrl.js"></script>
+<script src="cooperation/CooperationService.js"></script>
+<script src="cooperation/CooperationCtrl.js"></script>
 <!-- endbuild -->
 
 <!-- build:js config.js -->
