--- a/app/cooperation/cooperation.html
+++ b/app/cooperation/cooperation.html
@@ -24,7 +24,7 @@
   <div class="row" ng-show="cooperations">
     <div class="col-md-12">
       <h3>Etablerade anslutningar</h3>
-      <table class="table">
+      <table class="table table-bordered">
         <thead>
         <tr>
           <th>Tjänstekontrakt</th>
