--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
 <div class="container">
   <div>
-    <h1>Cooperation app</h1>
+    <h1>Information om Tjänst</h1>
   </div>
 
   <div ui-view=""></div>
